<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".ui.main.MainFragment"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_app"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_place"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/img_icon_place"
        android:src="@mipmap/ic_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutDestination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_place"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_destination"
            android:textAlignment="center"
            android:background="@drawable/border"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:textColor="@color/primary_dark" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/img_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img_icon_days"
        android:src="@mipmap/ic_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_place" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/img_calendar"
        app:layout_constraintTop_toBottomOf="@+id/img_place">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:text="@string/text_days"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/primary_dark"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        android:text="@string/text_year"
        android:textAlignment="center"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textLayoutDays"
        app:layout_constraintTop_toBottomOf="@+id/img_place" />


    <ImageView
        android:id="@+id/img_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img_icon_weather"
        android:src="@mipmap/ic_weather"
        app:layout_constraintStart_toEndOf="@+id/tv_year"
        app:layout_constraintTop_toBottomOf="@+id/img_place" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_weather"
        app:layout_constraintTop_toBottomOf="@+id/img_place">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp"
            android:text="@string/text_weather"
            android:textAlignment="center"
            android:textColor="@color/primary_dark"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@color/primary"
        android:text="@string/text_button_search"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_calendar" />

</android.support.constraint.ConstraintLayout>
